--- a/client/src/components/pages/RestPage/RestPage.module.css
+++ b/client/src/components/pages/RestPage/RestPage.module.css
@@ -33,6 +33,7 @@ a:hover {
 
 h1 {
   margin: 15px 0px;
+  font-size: 35px;
 }
 
 .main_info > p,
@@ -50,9 +51,11 @@ a {
 
 .btn_group {
   margin-top: 30px;
+  display: flex;
+  gap: 20px;
 }
 .button {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .description {
@@ -66,4 +69,9 @@ a {
   flex-direction: column;
   justify-content: space-between;
   gap: 50px;
+}
+
+.like_btn > .icon {
+  font-size: 25px;
+  margin: 10px;
 }
