--- a/client/src/components/pages/restaurant/RestaurantPage.module.css
+++ b/client/src/components/pages/restaurant/RestaurantPage.module.css
@@ -11,10 +11,18 @@
 
 .imageContainer {
   width: 500px;
-  margin-right: 20px;
+  margin-right: 10px;
   margin-bottom: 30px;
 }
 
 .descriptionContainer {
+  display: flex;
   flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+p {
+  margin-left: 20px;
+  margin-right: 20px;
 }
