--- a/client/src/components/pages/Homepage/Homepage.module.css
+++ b/client/src/components/pages/Homepage/Homepage.module.css
@@ -18,3 +18,12 @@
   justify-content: space-between;
   gap: 10px;
 }
+
+.tg_link {
+  /* width: 400px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
