--- a/client/src/components/Layout/Footer/Footer.module.css
+++ b/client/src/components/Layout/Footer/Footer.module.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #f0ebe4;
-  height: 300px;
+  background-color: white;
+  height: 200px;
+  width: 100%; 
+  padding: 0 20px; 
 }
