--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -1,5 +1,11 @@
 .main {
-  width: 80%;
+  flex: 1;
+  display: flex; 
+  flex-direction: column;
+}
+
+.main {
+  width: 100%;
   height: 100%;
   margin-inline: auto;
 }
