--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -15,9 +15,10 @@
 }
 
 .SearchBar {
-    width: 100%; 
-    margin-top: 30px; 
+    width: 99%; 
+    margin-top: 100px; 
     margin-bottom: 30px;
+    margin-left: 10px;
 }
 
 Select:focus-within {
