--- a/client/src/components/pages/Homepage/Homepage.module.css
+++ b/client/src/components/pages/Homepage/Homepage.module.css
@@ -4,6 +4,8 @@
   height: 450px;
   object-fit: cover;
   border-radius: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .recommend_header {
@@ -15,7 +17,7 @@
 
 .rests_container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 10px;
 }
 
@@ -26,4 +28,36 @@
   justify-content: center;
   align-items: center;
   font-size: 20px;
+}
+
+.bright_link {
+  color: purple; 
+  font-weight: bold;
+}
+
+.bordered_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  margin: 20px
+}
+
+.tg_link {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.bright_link {
+  color: purple;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+.bright_link:hover {
+  color: #00ff00;
 }
