--- a/client/src/components/pages/ProfilePage/ProfilePage.module.css
+++ b/client/src/components/pages/ProfilePage/ProfilePage.module.css
@@ -35,7 +35,38 @@
 }
 
 .title {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    font-size: large;
+  margin-top: 70px;
+  padding-top: 100px;
+  margin-bottom: 50px;
+  font-size: large;
+  color: white;
+}
+
+.videoContainer {
+  position: relative;
+  padding-bottom: 29%;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.profile {
+  position: relative;
+  z-index: 1;
+  text-align: center;
 }
