--- a/client/src/components/pages/auth/Login.module.css
+++ b/client/src/components/pages/auth/Login.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    justify-content: center;
+    margin-top: 400px;
 
 }
 
