--- a/client/src/components/pages/restaurantMapPage/listRestaurantsPage.module.css
+++ b/client/src/components/pages/restaurantMapPage/listRestaurantsPage.module.css
@@ -1,5 +1,6 @@
 .RestaurantMapPage {
   display: flex;
+  padding: 10px;
 }
 
 .RestaurantList {
@@ -9,4 +10,63 @@
 .MapContainer {
   flex: 1;
   border-radius: 10px;
+}
+
+.SearchBar {
+  padding-top: 500px;
+}
+
+.video_container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 57.4%;
+  overflow: hidden;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.search_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 80%;
+}
+
+.RestaurantMapPage {
+  margin-top: 20px;
+}
+
+.RestaurantList {
+  width: 40%;
+  float: left;
+}
+
+.MapContainer {
+  width: 60%;
+  float: right;
+}
+
+.search_title {
+  color: #fff;
+  font-size: 24px;
+  text-align: center;
 }
