--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,17 @@ html,
 body,
 body > div {
   height: 100%;
+  margin: 0;
+  padding: 0; 
+}
+
+body {
+  background-color: white;
+  display: flex; 
+  flex-direction: column;
 }
 
 html {
-  background-color: #f0ebe4;
+  background-color: white;
 }
+
