--- a/client/src/components/UI/Modal/Modal.module.css
+++ b/client/src/components/UI/Modal/Modal.module.css
@@ -2,3 +2,11 @@
   display: flex;
   justify-content: center;
 }
+
+.ant-modal-confirm-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
