--- a/client/src/components/UI/Timeslots/Timeslots.module.css
+++ b/client/src/components/UI/Timeslots/Timeslots.module.css
@@ -3,9 +3,10 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 5px;
+  margin-left: ;
 }
 
-button {
+/* button {
   width: 80px;
   margin-bottom: 10px;
-}
+} */
