--- a/client/src/components/pages/admin/AdminPage.module.css
+++ b/client/src/components/pages/admin/AdminPage.module.css
@@ -1,61 +1,12 @@
-.card__rest {
+.main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  margin: 10px;
-  transition: transform 0.3s ease;
-  width: calc(33.33% - 20px);
-
-  &:nth-child(3n + 1) {
-    margin-left: 0;
-  }
-
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  &:hover {
-    transform: scale(1.05);
-  }
-
-  .card__name {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  .btn__update,
-  .btn__delete {
-    background-color: #ffcc99;
-    color: #444;
-    border: none;
-    padding: 8px 15px;
-    margin-top: 5px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-
-    &:hover {
-      background-color: #ffaa66;
-    }
-  }
+  align-items: center;
 }
 
-.btn__add__rest {
-  background-color: #66cc99;
-  color: #fff;
-  border: none;
-  padding: 10px 15px;
-  margin-bottom: 20px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: #4db382;
-  }
+.btn_group {
+  display: flex;
+  gap: 20px;
+  margin: 15px;
 }
-
