--- a/client/src/components/UI/OptionsMenu/OptionMenu.module.css
+++ b/client/src/components/UI/OptionsMenu/OptionMenu.module.css
@@ -1,4 +1,14 @@
 .btn_group {
+  width: 300px;
   display: flex;
-  justify-content: space-between;
+  gap: 50px;
+}
+
+.seats {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 60px;
 }
