--- a/client/src/components/pages/Homepage/Homepage.module.css
+++ b/client/src/components/pages/Homepage/Homepage.module.css
@@ -1,3 +1,9 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .home_img {
   margin: 30px 0px 30px 0px;
   width: 100%;
@@ -6,24 +12,24 @@
   border-radius: 30px;
 }
 
-.recommend_header {
-  margin: 30px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.rests_container {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-
 .tg_link {
-  /* width: 400px; */
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  align-self: center;
+  font-size: 15 px;
+  border: 1px solid #a9aa7b;
+  border-radius: 20px;
+}
+
+.tg_link > p {
+  width: 500px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.tg_link > a {
+  font-size: 40px;
 }
