--- a/client/src/components/pages/admin/AdminPage.module.css
+++ b/client/src/components/pages/admin/AdminPage.module.css
@@ -15,3 +15,45 @@
   margin-top: 100px;
   margin-left: 30px;
 }
+
+.reservationContainer {
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  background: linear-gradient(#f5f5f5, #e0e0e0);
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.reservationContainer h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.reservationInfo {
+  margin-bottom: 15px;
+}
+
+.cancelButton {
+  background-color: #ff0000;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 200px;
+}
+
+.cancelButton:hover {
+  background-color: #cc0000;
+}
+
+.title {
+  margin-top: 70px;
+  padding-top: 100px;
+  margin-bottom: 50px;
+  font-size: large;
+  color: white;
+}
+
