--- a/client/src/components/UI/RestaurantItem/RestaurantItem.module.css
+++ b/client/src/components/UI/RestaurantItem/RestaurantItem.module.css
@@ -18,9 +18,10 @@
   border: 1px solid #4c4c40;
   border-radius: 10px;
   transition: transform 0.3s ease;
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
+  margin-left: 25px;
 }
-
 .card:hover {
   transform: scale(1.1);
 }
