--- a/client/src/components/pages/AboutPage/AboutPage.module.css
+++ b/client/src/components/pages/AboutPage/AboutPage.module.css
@@ -37,7 +37,7 @@
 }
 
 .h2 {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   font-size: large;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .button {
-  background-color: #b409e7;
+  background-color: #1b1a1b;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -87,7 +87,7 @@
 }
 
 .closeBtn {
-  background-color: black;
+  background-color: rgb(71, 70, 70);
   color: white;
   padding: 10px 20px;
   border: none;
@@ -97,5 +97,5 @@
 }
 
 .button:hover {
-  background-color: #4db382;
+  background-color: #9f82b3;
 }
