--- a/client/src/components/pages/ProfilePage/ProfilePage.module.css
+++ b/client/src/components/pages/ProfilePage/ProfilePage.module.css
@@ -35,10 +35,10 @@
 }
 
 .title {
-  margin-top: 70px;
-  padding-top: 100px;
+  margin-top: 60px;
+  padding-top: 80px;
   margin-bottom: 50px;
-  font-size: large;
+  font-size: 30px;
   color: white;
 }
 
