--- a/client/src/components/pages/restaurant/RestaurantPage.module.css
+++ b/client/src/components/pages/restaurant/RestaurantPage.module.css
@@ -1,6 +1,12 @@
 .cardRest {
   display: flex;
   align-items: flex-start;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+  border: 2px solid #000;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  width: 95%;
 }
 
 .content {
@@ -25,4 +31,8 @@
 p {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.cardRest:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
