--- a/client/src/components/mainWords/MainWords.module.css
+++ b/client/src/components/mainWords/MainWords.module.css
@@ -19,7 +19,10 @@
 }
 
 .video {
-  height: 102vh;
+  /* override other styles to make responsive */
+  /* width: 100% !important;
+  height: auto !important; */
+  /* height: 102vh; */
 }
 
 .hero_text {
