--- a/client/src/components/UI/RestaurantItem/RestaurantItem.module.css
+++ b/client/src/components/UI/RestaurantItem/RestaurantItem.module.css
@@ -20,7 +20,8 @@
   transition: transform 0.3s ease;
   width: 300px;
   height: 300px;
-  margin-left: 25px;
+  padding: 0!important;
+  /* margin-left: 25px; */
 }
 .card:hover {
   transform: scale(1.1);
